@@ -846,6 +846,10 @@ $wgGroupPermissions['bureaucrat']['userrights'] = true;
  */
 # $wgGroupPermissions['developer']['siteadmin'] = true;
 
+/**
+ * List of groups which won't appear in Special:Listusers
+ */
+$wgInvisibleGroups = array();
 
 /**
  * Set of available actions that can be restricted via Special:Protect
